# PRODUCT_MS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ProductCRUD  cmake_install.cmake
src/: ProductDatabase.cpp  ProductDatabase.h  main.cpp
src/auth/: auth.cpp  auth.h  authMiddleware.cpp  authMiddleware.h
src/auth/authMiddleware/: authMiddleware.cpp
src/auth/route/: auth_routes.h
src/db/: db_connection.cpp  db_connection.h
src/helper/: isAdmin.cpp  isAdmin.h
src/logging/: logs.txt
src/order/: order.cpp  orderDetails.cpp  orderDetails.h  orders.h
src/order/orderController/: orderController.cpp  orderController.h
src/order/route/: order_routes.h
src/product/: Product.h  ProductDatabase.cpp  ProductDatabase.h
src/product/productController/: productController.cpp  productController.h
src/product/route/: product_routes.h
src/testing/: add_product_test.cc  delete_product_test.cc  get_order_details_test.cc  manage_order_status.cc  place_order_test.cc  update_product_test.cc
